measurement api error resolved
