# storage/api-docs/api-docs.json
@@ -67,30 +67,53 @@
                 ]
             }
         },
-        "/measurements/store": {
+        "/measurements/dresses/{dress_id}/store": {
             "post": {
                 "tags": [
                     "Measurements"
                 ],
-                "summary": "Create a new measurement",
-                "operationId": "5be9d6b3659a23b0d1837cccc2ae0637",
+                "summary": "Create a new measurement with values",
+                "operationId": "cd6d023d6d8c06aa369d91a641073cc0",
+                "parameters": [
+                    {
+                        "name": "dress_id",
+                        "in": "path",
+                        "description": "The ID of the dress",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
                 "requestBody": {
                     "required": true,
                     "content": {
                         "application/json": {
                             "schema": {
-                                "required": [
-                                    "model",
-                                    "model_id"
-                                ],
                                 "properties": {
-                                    "model": {
-                                        "type": "string",
-                                        "example": "dress"
-                                    },
-                                    "model_id": {
-                                        "type": "integer",
-                                        "example": 123
+                                    "measurementBoxes": {
+                                        "description": "Array of measurement values",
+                                        "type": "array",
+                                        "items": {
+                                            "properties": {
+                                                "measurement_id": {
+                                                    "description": "ID of the measurement",
+                                                    "type": "integer",
+                                                    "example": 2
+                                                },
+                                                "parameter_id": {
+                                                    "description": "ID of the parameter",
+                                                    "type": "integer",
+                                                    "example": 3
+                                                },
+                                                "value": {
+                                                    "description": "Measurement value",
+                                                    "type": "number",
+                                                    "example": 56
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
                                     }
                                 },
                                 "type": "object"
@@ -100,27 +123,14 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Measurement added successfully",
+                        "description": "Measurement created successfully",
                         "content": {
                             "application/json": {
                                 "schema": {
                                     "properties": {
-                                        "success": {
-                                            "type": "boolean",
-                                            "example": true
-                                        },
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Measurement Added Successfully"
-                                        },
-                                        "data": {
-                                            "properties": {
-                                                "measuremnet_id": {
-                                                    "type": "integer",
-                                                    "example": 1
-                                                }
-                                            },
-                                            "type": "object"
+                                        "measurement_id": {
+                                            "type": "integer",
+                                            "example": 1
                                         }
                                     },
                                     "type": "object"
@@ -143,30 +153,8 @@
                                             "example": "Measurement data validation error"
                                         },
                                         "data": {
-                                            "type": "object",
-                                            "additionalProperties": {
-                                                "type": "string"
-                                            }
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Server error",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "success": {
-                                            "type": "boolean",
-                                            "example": false
-                                        },
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Measurement cannot be added"
+                                            "description": "Details about the validation errors",
+                                            "type": "object"
                                         }
                                     },
                                     "type": "object"
@@ -1137,108 +1125,6 @@
                         }
                     }
                 }
-            }
-        },
-        "/tailors/parameters": {
-            "get": {
-                "tags": [
-                    "Parameters"
-                ],
-                "summary": "Get all parameters for a specific tailor",
-                "operationId": "dd7d74e965a471cea82fbeb9bc51631a",
-                "responses": {
-                    "200": {
-                        "description": "List of parameters",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "tailor_id": {
-                                            "type": "integer",
-                                            "example": 1
-                                        },
-                                        "parameters": {
-                                            "type": "array",
-                                            "items": {
-                                                "properties": {
-                                                    "id": {
-                                                        "type": "integer",
-                                                        "example": 1
-                                                    },
-                                                    "name": {
-                                                        "type": "string",
-                                                        "example": "Parameter 1"
-                                                    },
-                                                    "type": {
-                                                        "type": "string",
-                                                        "example": "string"
-                                                    },
-                                                    "value": {
-                                                        "type": "string",
-                                                        "example": "Some value"
-                                                    },
-                                                    "created_at": {
-                                                        "type": "string",
-                                                        "format": "date-time",
-                                                        "example": "2024-08-03T12:00:00Z"
-                                                    },
-                                                    "updated_at": {
-                                                        "type": "string",
-                                                        "format": "date-time",
-                                                        "example": "2024-08-03T12:00:00Z"
-                                                    }
-                                                },
-                                                "type": "object"
-                                            }
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "No parameters added",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "tailor_id": {
-                                            "type": "integer",
-                                            "example": 1
-                                        },
-                                        "parameters": {
-                                            "type": "string",
-                                            "example": "No parameters added"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthenticated",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Unauthenticated."
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
             }
         }
     },
